--- a/web3/package.json
+++ b/web3/package.json
@@ -3,10 +3,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "hardhat": "^2.16.1"
+    "hardhat": "^2.17.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
+    "@truffle/hdwallet-provider": "^2.1.13",
     "dotenv": "^16.3.1",
     "path": "^0.12.7"
   }
